fix : img webp, h1 h2 h3 structure

--- a/assets/style.css
+++ b/assets/style.css
@@ -103,7 +103,7 @@ body {
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
+  color: #000;
   background-color: #beb45a;
   border-radius: 0;
 }
